mobile overflows, navlink hover styles and trailer modal fixed

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600;700&display=swap');
 
+/* * {
+    border: solid red 1px;
+}
+
+nav {
+    border: solid 1px yellow !important;
+    max-width: 100vw !important; 
+    overflow: hidden;
+} */
+
 :root {
     /* --primary-red: #e50914; */
     --primary-red: #ffcc00;
@@ -68,6 +78,49 @@ body {
 
 .floating {
     animation: floating 3s ease-in-out infinite;
+}
+
+/* HTML: <div class="loader"></div> */
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #ededed;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
 }
 
 @keyframes floating {
